Added support for SQLite for storing data